--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h4 {
 
 div.top {
     position: relative;
-    height: 25vh;
+    height: 30vh;
     z-index: 1500;
     overflow: auto;
 }
@@ -272,6 +272,7 @@ form {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 35%;
 }
 
 .rightI {
