--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ div.top {
     background-repeat: no-repeat;
     background-size: 80vw 35vh;
     font-size: 0;
+    border: 0.25vw solid midnightblue;
+    border-bottom: none;
 }
 
 .bottom {
@@ -70,9 +72,16 @@ div.top {
     bottom: 0px;
     z-index: 1500;
     height: 7vh;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
     background: linear-gradient(to right, #03C3C7,#417272);
     font-size: 0;
+}
+
+#access {
+    position: relative;
+    bottom: 1.75vh;
+    left: 1vw;
+    color: aliceblue;
 }
 
 .left {
@@ -104,7 +113,7 @@ div.top {
     position: relative;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-samples {
     height: 263vh;
@@ -113,7 +122,7 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-index {
     height: 125vh;
@@ -122,7 +131,7 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-about {
     height: 135vh;
@@ -131,7 +140,7 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-ed {
     height: 150vh;
@@ -140,7 +149,7 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-exp {
     height: 80vh;
@@ -149,7 +158,7 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-acc {
     height: 130vh;
@@ -158,7 +167,7 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
 }
 .moved-left-contact {
     height: 120vh;
@@ -167,7 +176,17 @@ div.top {
     left: 10%;
     background-color:lightcyan;
     padding: 2vw;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
+}
+
+.moved-left-access {
+    height: 120vh;
+    position: relative;
+    width: 80vw;
+    left: 10%;
+    background-color:lightcyan;
+    padding: 2vw;
+    border: 0.25vw solid midnightblue;
 }
 
 label {
@@ -220,7 +239,7 @@ label {
 .bottom-border {
     padding-bottom: 2vh;
     padding-top: 2vh;
-    border-bottom: 0.25vh solid #417272;
+    border-bottom: 0.25vh solid midnightblue;
 }
 
 .list {
@@ -292,7 +311,7 @@ li {
     left: 10%;
     position: relative;
     height: 10vh;
-    border: 0.25vw solid #417272;
+    border: 0.25vw solid midnightblue;
     border-bottom: none;
 }
 
