--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ h2 {
     font-family: sans-serif;
     color: #417272;
     position: relative;
-    line-height: 1.5;
     z-index: 0;
     font-size: 2vw;
 }
@@ -31,10 +30,18 @@ h3 {
     font-family: sans-serif;
     color: #417272;
     position: relative;
-    line-height: 1.5;
     z-index: 0;
     font-size: 1.5vw;
 }
+
+p {
+    font-family: sans-serif;
+    color: #417272;
+    position: relative;
+    z-index: 0;
+    font-size: 1.25vw;
+}
+
 
 h4 {
     font-family: sans-serif;
@@ -82,6 +89,11 @@ div.top {
     bottom: 1.75vh;
     left: 1vw;
     color: aliceblue;
+}
+
+#access:hover {
+    color: midnightblue;
+    
 }
 
 .left {
@@ -263,13 +275,6 @@ a:visited {
 
 a:hover {
     color: midnightblue;
-    line-height: 1.5;
-}
-
-p {
-    font-family: sans-serif;
-    color: dodgerblue;
-    position: relative;
     line-height: 1.5;
 }
 
