--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the style sheet, contains styling of entire website
+*/
 body {
     font-size: 0;
     height: 100%;
